# financial_manager

./: .env.local.example  .gitignore  DEPLOYMENT.md  IMPLEMENTACAO_COMPLETA.md  TEST_RECURRING_EXPENSE.md  next.config.js  package-lock.json  package.json
.github/workflows/: deploy-dockerhub.yml  deploy-vercel.yml
backend/: .dockerignore  .env.apple.example  .gitignore  VERCEL_DEPLOY.md  VERCEL_SETUP.md  package-lock.json  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: config.py  database.py  main.py
backend/app/core/: apple_auth.py  utils.py
backend/app/models/: expense.py  user.py
backend/app/schemas/: __init__.py  auth.py  dashboard.py  expense.py  investment.py  recurring_expense.py
backend/docs/: API_REFERENCE.md  ARCHITECTURE.md
backend/migrations/: add_apple_id.sql
fast-api/: .env.example  .gitignore  BACKEND_COMPLETO.md  README.md  start.bat  start.sh
fast-api/app/: config.py  dependencies.py  main.py
fast-api/app/core/: security.py
fast-api/app/models/: __init__.py  investment.py  payment_method.py  recurring_expense.py  user.py
fast-api/app/schemas/: payment_method.py
frontend/: .dockerignore  .env.production  API_README.md  EXAMPLES.tsx  README.md  package-lock.json  package.json
frontend/docs/: API_INTEGRATION.md  ARCHITECTURE.md
frontend/src/: RESPONSIVE_ARCHITECTURE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: layout.tsx  page.tsx
src/components/: ActivityChartCard.tsx  Button.tsx  LiquidGlassDemo.tsx  Modal.tsx  ProtectedRoute.tsx  Sidebar.tsx  ThemeDemo.tsx
(+112 files in other folders)
